--- a/frontend/src/assets/styles/app.scss
+++ b/frontend/src/assets/styles/app.scss
@@ -75,13 +75,6 @@ body {
         margin-bottom: 30px;
     }
 
-    .button_wrapper {
-        width: 90%;
-        display: flex;
-        align-items: left;
-        margin: 30px 0px;
-    }
-
     input, select {
         border-radius: 5px;
         height: 30px;
@@ -97,6 +90,13 @@ body {
         }   
 
     }   
+}
+
+.button_wrapper {
+    width: 90%;
+    display: flex;
+    align-items: left;
+    margin: 30px 0px;
 }
 
 button, path, .pointer {
@@ -131,7 +131,7 @@ button, path, .pointer {
     }
 }
 
-.home, .client_info {
+.home, .client_info, .request_sent {
     background-color: $background-white;
     border-radius: 15px;
     width: 900px;
@@ -154,6 +154,20 @@ button, path, .pointer {
 
     .button_container {
         flex-basis: 100%;
+        margin-bottom: 30px;
+    }
+}
+
+.request_sent {
+    margin: 50px auto;
+    background-color: $background-white;
+
+    .text {
+        padding: 30px;
+    }
+
+    .button_back {
+        margin-left: 30px;
         margin-bottom: 30px;
     }
 }
